fixed content overflow outside the container

--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -4,8 +4,9 @@
     width: 100%;
     max-width: 1440px;
     margin: 0 auto;
-    padding: 64px;
+    padding: 64px 20px;
     background-color: #FFFFFF;
+    box-sizing: border-box;
 }
 
 .feedback-container {
@@ -258,7 +259,7 @@
 
 @media only screen and (min-width: 768px) {
     .feedback {
-        padding: 32px 32px;
+        padding: 48px 32px;
     }
     .feedback-container-pagination {
         flex-direction: row;
@@ -273,7 +274,7 @@
 /* Tablet style */
 @media only screen and (min-width: 768px) and (max-width: 1439.98px) {
     .feedback {
-        padding: 32px;
+        padding: 48px 32px;
     }
     .feedbacks-container-title {
         margin-bottom: 48px;
@@ -297,6 +298,6 @@
 /* Desktop style */
 @media only screen and (min-width: 1440px) {
     .feedback {
-        padding: 64px;
+        padding: 80px 64px;
     }
 }
